reformat some files to match the format of DroidFish; merge some changes from DroidFish; fix error with promotion when copy/pasting games